objects/Sales_Team_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Actuals_End_of_Period__c</fullName>
        <label>Actuals End of Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actuals_Semester_Todate__c</fullName>
        <label>Actuals Semester Todate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_End_of_Period__c</fullName>
        <label>Last Year End of Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Year_Semester_Todate__c</fullName>
        <label>Last Year Semester Todate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference_Period_of_the_KPI__c</fullName>
        <label>Reference Period of the KPI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_End_Of_Period__c</fullName>
        <label>Target End Of Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Semester_Todate__c</fullName>
        <label>Target Semester Todate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_s_Id__c</fullName>
        <label>User&apos;s Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Level__c</fullName>
        <label>User&apos;s Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Name__c</fullName>
        <label>User&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Unit__c</fullName>
        <label>User&apos;s Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Team Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Team Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>